PDI_133: Make reasonable error message. (#23)
